# mass

./: .description.md  .design.md  .pre-commit-config.yaml  Dockerfile  Dockerfile.debian  README.md  config_schema.json  example_config.yaml  openapi.yaml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt  setup.cfg
.devcontainer/: .dev_config.yaml  dev_launcher  devcontainer.json  docker-compose.yml
.devcontainer/.devcontainer/: .dev_config.yaml  docker-compose.yml
.pyproject_generation/: pyproject_custom.toml
.readme_generation/: description.md  design.md
lock/: requirements-dev.txt  requirements.txt
mass/: __init__.py  __main__.py  cli.py  config.py  container.py  main.py
mass/adapters/inbound/: event_sub.py
mass/adapters/outbound/: aggregator.py  dao.py  utils.py
mass/core/: models.py  query_handler.py  utils.py
mass/ports/inbound/: query_handler.py
mass/ports/outbound/: aggregator.py  dao.py
scripts/: update_lock.py
scripts/script_utils/: fastapi_app_location.py
src/mass/: __init__.py  __main__.py  cli.py  config.py  container.py  inject.py  main.py
src/mass/core/: models.py  query_handler.py
tests/: conftest.py  test_api.py  test_consumer.py  test_filtering.py  test_index_creation.py  test_logging.py  test_relevance.py  test_resources.py  test_sorting.py  test_utils.py
tests/fixtures/: config.py  joint.py  module_scope_fixtures.py  mongo.py  test_config.yaml  utils.py
tests/fixtures/test_data/: DatasetEmbedded.json  FilteringTests.json  NestedData.json  RelevanceTests.json  SortingTests.json
(+13 files in other folders)
